catalog-new-pravki

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -307,6 +307,7 @@
                         </a>
                     </div>
                 </div>
+                <div class="clearfix"></div>
                 <div class="shops-footer">
                     <div class="shops-footer-prev">
                         <a class="shops-footer-prev-link" href="#">
@@ -316,7 +317,7 @@
                     <div class="shops-footer-counter">
                         <ul class="shops-footer-counter-items">
                             <!-- Если елемент активен он присвоит класс active -->
-                            <li class="shops-footer-counter-item-active"><a class="shops-footer-counter-link-active" href="#">1</a></li>
+                            <li class="shops-footer-counter-item-active"><a class="shops-footer-counter-link shops-footer-counter-link-active" href="#">1</a></li>
                             <li class="shops-footer-counter-item"><a class="shops-footer-counter-link" href="#">2</a></li>
                             <li class="shops-footer-counter-item"><a class="shops-footer-counter-link" href="#">3</a></li>
                             <li class="shops-footer-counter-item"><a class="shops-footer-counter-link" href="#">4</a></li>
@@ -324,7 +325,7 @@
                         </ul>
                     </div>
                     <div class="shops-footer-next">
-                        <a class="shops-footer-next-link" href="#">Вперед
+                        <a class="shops-footer-next-link shops-footer-next-link-active" href="#">Вперед
                             <img class="shops-footer-next-img" src="img/arrow-right.png" alt="">
                         </a>
                     </div>
@@ -335,7 +336,7 @@
                             </a>
                         </div>
                         <div class="shops-footer-next shops-footer-next-2">
-                            <a class="shops-footer-next-link" href="#">Вперед
+                            <a class="shops-footer-next-link shops-footer-next-link-active" href="#">Вперед
                                 <img class="shops-footer-next-img" src="img/arrow-right.png" alt="">
                             </a>
                         </div>
